--- a/haunted-florida.html
+++ b/haunted-florida.html
@@ -124,7 +124,7 @@
                   </ul>
                   <div class="navigation-actions">
                     <a
-                      href="https://jazzywillowdesigns.com"
+                      href="https://jazzywillowdesigns.com/collections/travel-maps"
                       target="_blank"
                       rel="noreferrer noopener"
                     >
@@ -233,7 +233,7 @@
                     </li>
                 </ul>
                 <div class="navigation-overlay-footer">
-                  <a href="https://jazzywillowdesigns.com/collectios/travel-maps">
+                  <a href="https://jazzywillowdesigns.com/collections/travel-maps">
                     <div class="btn-primary btn-lg btn">
                       <span>Shop Maps</span>
                     </div>
