--- a/haunted-florida.html
+++ b/haunted-florida.html
@@ -188,7 +188,7 @@
                       </svg>
                     </div>
                     <span class="navigation-brand-name section-title">
-                      Haunted Florida
+                      Jazzy Willow Designs
                     </span>
                   </div>
                 </a>
