--- a/haunted-florida.html
+++ b/haunted-florida.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>Haunted Florida - Jazzy Willow Designs</title>
     <meta
       property="og:title"
