--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
 
+    <link rel="icon" type="image/png" href="favicon.png">
+
     <script>
       // Redirect only if the user is at the root (/) 
       if (window.location.pathname === '/' || window.location.pathname === '/index.html') {
