--- a/haunted-florida.html
+++ b/haunted-florida.html
@@ -799,7 +799,7 @@
                 <div class="cta-visual">
                   <img
                     alt="Wooden Map Detail"
-                    src="https://images.pexels.com/photos/11573495/pexels-photo-11573495.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1500"
+                    src="./images/haunted-map-close-up.jpg"
                     class="cta-img"
                   />
                 </div>
@@ -1062,12 +1062,7 @@
                         <div class="footer-legal-link">
                           <span>Terms of Service</span>
                         </div>
-                      </a>
-                      <a href="#">
-                        <div class="footer-legal-link">
-                          <span>Shipping &amp; Returns</span>
-                        </div>
-                      </a>
+                      </a>                      
                     </div>
                   </div>
                 </div>
