--- a/haunted-florida.html
+++ b/haunted-florida.html
@@ -867,6 +867,15 @@
               <div class="footer-container">
                 <div class="footer-grid">
                   <div class="footer-brand-column">
+                   
+                    <div class="cta-img-footer footer-logo-container">
+                      <img
+                        alt="Jazzy Willow Designs"
+                        src="./images/jwd-logo-white.png"
+                        class="footer-logo-img"
+                      />
+                    </div>
+
                     <div class="footer-logo-wrapper">
                       <svg
                         fill="none"
@@ -987,64 +996,7 @@
                       </a>
                     </nav>
                   </div>
-                  <div class="footer-nav-column">
-                    <h3 class="footer-column-heading section-subtitle">
-                      Stay Haunted
-                    </h3>
-                    <p class="section-content footer-newsletter-text">
-                      Sign up for early access to new products and special
-                      offers.
-                    </p>
-                    <form
-                      action="#"
-                      method="POST"
-                      data-form-id="c0c916e9-7df7-4fb1-98f5-9a572996363a"
-                      class="footer-newsletter-form"
-                    >
-                      <div class="footer-input-group">
-                        <input
-                          type="email"
-                          id="thq_textinput_0NXh"
-                          name="textinput"
-                          required="true"
-                          aria-label="Email for newsletter"
-                          placeholder="Your spectral email"
-                          data-form-field-id="thq_textinput_0NXh"
-                          class="footer-input"
-                        />
-                        <button
-                          id="thq_button_1SDS"
-                          name="button"
-                          type="submit"
-                          data-form-field-id="thq_button_1SDS"
-                          class="btn-primary footer-submit-btn btn btn-sm"
-                        >
-                          Invoke
-                        </button>
-                      </div>
-                    </form>
-                    <div class="footer-contact-info">
-                      <div class="footer-contact-item">
-                        <svg
-                          fill="none"
-                          width="16"
-                          xmlns="http://www.w3.org/2000/svg"
-                          height="16"
-                          stroke="currentColor"
-                          viewBox="0 0 24 24"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="footer-contact-icon"
-                        >
-                          <path
-                            d="M12 2a8 8 0 0 0-8 8v12l3-3l2.5 2.5L12 19l2.5 2.5L17 19l3 3V10a8 8 0 0 0-8-8"
-                          ></path>
-                        </svg>
-                        <span class="section-content">Tampa, Florida</span>
-                      </div>
-                    </div>
-                  </div>
+                  
                 </div>
                 <div class="footer-bottom">
                   <div class="footer-bottom-content">
